--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^1.0.3
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
